# zephyr_ot_template

./: CMakeLists.txt  README.md  build-xiao.sh  flash-xiao.sh  overlay-OT-0x2410-mtd.conf  prj.conf
boards/: xiao_ble.overlay
lib/: ds18b20.c  ds18b20.h  mqtt_utils.c  mqtt_utils.h  shell_utils.c  shell_utils.h  sht75.c  sht75.h  thread_utils.c  thread_utils.h
src/: main.c
